# coolaw-deskflow

./: .env.example  .gitignore  ARCHITECTURE.md  BACKEND-API-REPORT.md  CHANGELOG.md  CLAUDE.md  CONFIG-WIZARD-FORM-REPORT.md  CONTEXT_FIX_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_REPORT.md  P0-COMPLETION-SUMMARY.md  P0-DELIVERY-REPORT.md  P0-IMPLEMENTATION-REPORT.md  P0-INTEGRATION-TEST-REPORT.md  P0-UAT-TEST-PLAN.md  P0-UAT-TEST-REPORT.md  PROJECT_STATUS.md  README.md  UPGRADE_PLAN_v2.md  pyproject.toml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/scripts/: build-dmg.sh  test-desktop-app.sh
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: BACKGROUND_SERVICE_ANALYSIS.md  DEPLOYMENT.md  INDEX.md  MONITOR_COMPARISON.md  api.md  configuration.md  developer-guide.md  prd-compliance-report.md
docs/01-PRD/: PRD-v1.0-需求说明.md
docs/02-DRD/: DRD-v1.0-设计说明.md
docs/03-原型/prototype/: index.html
docs/04-开发任务/: TASK-001-COMPLETE.md  TASK-002-COMPLETE.md  TASK-003-COMPLETE.md  TASK-004-COMPLETE.md  TASK-005-COMPLETE.md  TASK-006-COMPLETE.md  TASK-007-COMPLETE.md  TASK-008-COMPLETE.md  tasks-phase1.md  tasks.md  待办任务清单-v2.0.md
docs/05-测试用例/: test-cases-v1.0.md
docs/06-验证报告/: verification-report-v1.0.md
docs/07-开发日志/: 2026-02-21-final.md  2026-02-21.md  2026-02-24-documentation.md  2026-02-25-i18n-fix.md  2026-02-25-p0-implementation.md  2026-02-26-p1-implementation.md
docs/08-Settings-UI-改进方案/: settings-ui-improvement-plan.md
docs/design-system/: MASTER.md
docs/identity/: AGENT.md
identity/: AGENT.md  MEMORY.md  SOUL.md  USER.md
identity/personas/: business.md  butler.md  default.md  tech_expert.md
scripts/: build-remote-app.sh  start-remote-test.sh
skills/anthropic_cookbook/: skill.json
skills/auto_generated/rate_limit_handler/: __init__.py  config.json  rate_limit_handler.py
skills/code_runner/: skill.json
skills/document_processor/: skill.json
skills/image_analyzer/: skill.json
skills/system/add-memory/: SKILL.md
skills/system/browser-get-content/: SKILL.md
skills/system/browser-list-tabs/: SKILL.md
skills/system/browser-navigate/: SKILL.md
skills/system/browser-new-tab/: SKILL.md
skills/system/browser-open/: SKILL.md
skills/system/browser-screenshot/: SKILL.md
skills/system/browser-status/: SKILL.md
skills/system/browser-switch-tab/: SKILL.md
skills/system/browser-task/: SKILL.md
skills/system/browser-type/: SKILL.md
skills/system/call-mcp-tool/: SKILL.md
skills/system/complete-plan/: SKILL.md
skills/system/create-plan/: SKILL.md
skills/system/deliver-artifacts/: SKILL.md
skills/system/desktop-click/: SKILL.md
skills/system/desktop-find-element/: SKILL.md
skills/system/desktop-hotkey/: SKILL.md
skills/system/desktop-inspect/: SKILL.md
skills/system/desktop-screenshot/: SKILL.md
skills/system/desktop-scroll/: SKILL.md
skills/system/desktop-type/: SKILL.md
skills/system/desktop-wait/: SKILL.md
skills/system/desktop-window/: SKILL.md
skills/system/enable-thinking/: SKILL.md
skills/system/find-skills/: SKILL.md
skills/system/generate-image/: SKILL.md
skills/system/get-image-file/: SKILL.md
skills/system/list-skills/: SKILL.md
source/: architecture-analysis.md
src/deskflow/: __init__.py  __main__.py  app.py  config.py
tests/: conftest.py  test_activity_log.py  test_channels.py  test_complete.py  test_desktop.py  test_dingtalk.py  test_feishu.py  test_logging.py  test_mcp.py  test_media.py  test_orchestration.py  test_registry.py  test_session.py  test_sticker.py  test_telegram.py  test_tracing.py  test_wework.py  test_worker_agent.py
tests/integration/: test_agent_flow.py  test_memory_roundtrip.py  test_tool_security.py
(+200 files in other folders)
