[project]
name = "coolaw-deskflow"
version = "0.1.0"
description = "A self-evolving AI Agent desktop framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Coolaw", email = "coolaw@example.com" },
]

dependencies = [
    # LLM clients
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Database
    "aiosqlite>=0.20.0",
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # HTTP client
    "httpx>=0.27.0",
    # Retry
    "tenacity>=9.0.0",
    # Logging
    "structlog>=24.0.0",
    # System monitoring
    "psutil>=6.0.0",
    # Vector search
    "hnswlib>=0.8.0",
    # Sentence embeddings
    "sentence-transformers>=2.7.0",
    # Multi-agent communication
    "pyzmq>=25.0.0",
    # Metrics (optional for MVP)
    # "prometheus-client>=0.21.0",
    # "opentelemetry-api>=1.27.0",
    # Embedding (lightweight)
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
deskflow = "deskflow.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deskflow"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["deskflow"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "aiosqlite.*", "hnswlib.*", "sentence_transformers.*", "psutil.*", "pyzmq.*"]
ignore_missing_imports = true

# Allow less strict rules for API routes and tests
[[tool.mypy.overrides]]
module = ["deskflow.api.*", "tests.*"]
disallow_any_generics = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/deskflow"]
omit = [
    "tests/*",
    "src/deskflow/core/protocols.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "@abc.abstractmethod",
    "raise NotImplementedError",
]
